--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,15 @@ dependencies = [
     "click==8.2.1",
     "h5==0.11.0",
     "h5py==3.14.0",
+    "keyboard>=0.13.5",
     "markdown-it-py==3.0.0",
     "mdurl==0.1.2",
     "mss==10.0.0",
     "numpy==2.3.1",
+    "opencv-python>=4.11.0.86",
     "pygame==2.6.1",
     "pygments==2.19.2",
+    "pynput>=1.8.1",
     "rich==14.0.0",
     "ry==0.0.49",
     "typing-extensions==4.14.1",
