--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
-name = "brick-breaker-dit"
+name = "flappy-bird-dit"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "click==8.2.1",
+    "gymnasium>=1.2.0",
     "h5==0.11.0",
     "h5py==3.14.0",
     "keyboard>=0.13.5",
@@ -19,5 +20,7 @@ dependencies = [
     "pynput>=1.8.1",
     "rich==14.0.0",
     "ry==0.0.49",
+    "torch[cuda]>=2.7.1",
+    "tqdm>=4.67.1",
     "typing-extensions==4.14.1",
 ]
