--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "click==8.2.1",
-    "gymnasium>=1.2.0",
+    "gymnasium==1.0.0",
     "h5==0.11.0",
     "h5py==3.14.0",
     "keyboard>=0.13.5",
@@ -15,12 +15,15 @@ dependencies = [
     "mss==10.0.0",
     "numpy==2.3.1",
     "opencv-python>=4.11.0.86",
+    "pillow>=11.3.0",
     "pygame==2.6.1",
     "pygments==2.19.2",
     "pynput>=1.8.1",
+    "ray[rllib]>=2.48.0",
     "rich==14.0.0",
     "ry==0.0.49",
     "torch[cuda]>=2.7.1",
     "tqdm>=4.67.1",
     "typing-extensions==4.14.1",
+    "wandb>=0.21.0",
 ]
